INCLUDE_DIRECTORIES(${ROSS_BINARY_DIR})
IF(USE_DAMARIS)
    INCLUDE_DIRECTORIES(${DAMARIS_INCLUDE}) 
ENDIF(USE_DAMARIS)
IF(BGPM)
	INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR} ${BGPM_LIB})
ELSE(NOT(BGPM))
	INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR})
ENDIF(BGPM)

SET(clone_test_2_srcs
	clone_test_2.c
	clone_test_2.h)


ADD_EXECUTABLE(clone_test_2 ${clone_test_2_srcs})
ADD_EXECUTABLE(clone_test_2_test ${clone_test_2_srcs})

IF(BGPM)
	TARGET_LINK_LIBRARIES(clone_test_2 ROSS imp_bgpm m)
	TARGET_LINK_LIBRARIES(clone_test_2_test ROSS imp_bgpm m)
ELSE(NOT(BGPM))
    IF(USE_DAMARIS)
        TARGET_LINK_LIBRARIES(clone_test_2 ROSS ROSS_Damaris m)
        TARGET_LINK_LIBRARIES(clone_test_2_test ROSS ROSS_Damaris m)
    ELSE(NOT(USE_DAMARIS))
        TARGET_LINK_LIBRARIES(clone_test_2 ROSS m)
        TARGET_LINK_LIBRARIES(clone_test_2_test ROSS m)
    ENDIF(USE_DAMARIS)
ENDIF(BGPM)

ROSS_TEST_SCHEDULERS(clone_test_2)
ROSS_TEST_INSTRUMENTATION(clone_test_2)

SET_TARGET_PROPERTIES(clone_test_2_test PROPERTIES COMPILE_DEFINITIONS TEST_COMM_ROSS)
ROSS_TEST_SCHEDULERS(clone_test_2_test)
ROSS_TEST_INSTRUMENTATION(clone_test_2_test)

INSTALL(FILES ${ROSS_BINARY_DIR}/../models/clone_test_2/clone_test_2 DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

